<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013 Daniël W. Crompton <info+fbn@specialbrands.net>
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/setgoal"
            />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/choosegoal"
            />
    <EditText android:id="@+id/goal"
              android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:hint="@string/goalquestion"
              android:layout_weight="8"
              android:singleLine="true"
              android:gravity="center"
              />
    <Button android:layout_height="60dp"
            android:layout_width="fill_parent"
            android:id="@+id/goalbutton"
            android:textSize="20dp"
            android:hint="@string/goal"
            />
    <Button android:layout_height="60dp"
            android:layout_width="fill_parent"
            android:id="@+id/resultbutton"
            android:textSize="20dp"
            android:hint="@string/result"
            android:enabled="false"
            />
</LinearLayout>

